Only rerank the first snippet